--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ body {
     align-items: center;
     font-family: var(--main-font);
     color: var(--text-color);
+    background-repeat: no-repeat;
 }
 
 .header, .main {
@@ -79,10 +80,21 @@ h3 {
     display: flex;
     flex-direction: column;
     gap: 12px;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.13);
+    text-wrap: nowrap;
 }
 
 h2 {
     font-size: 2rem;
+}
+
+label {
+    font-size: 0.8rem;
+    font-family: var(--main-font);
+    font-weight: var(--main-font-weight);
 }
 
 .btn {
